--- a/index.html
+++ b/index.html
@@ -6,24 +6,15 @@
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" />
 
 	<!-- Set the viewport width to device width for mobile -->
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width" />
 
-	<title>Deux Mille</title>
+	<title>Welcome to Foundation</title>
   
 	<!-- Included CSS Files -->
-	<!-- Combine and Compress These CSS Files -->
-	<link rel="stylesheet" href="stylesheets/globals.css">
-	<link rel="stylesheet" href="stylesheets/typography.css">
-	<link rel="stylesheet" href="stylesheets/grid.css">
-	<link rel="stylesheet" href="stylesheets/ui.css">
-	<link rel="stylesheet" href="stylesheets/forms.css">
-	<link rel="stylesheet" href="stylesheets/orbit.css">
-	<link rel="stylesheet" href="stylesheets/reveal.css">
-	<link rel="stylesheet" href="stylesheets/mobile.css">
-	<!-- End Combine and Compress These CSS Files -->
+	<link rel="stylesheet" href="stylesheets/foundation.css">
 	<link rel="stylesheet" href="stylesheets/app.css">
 
 	<!--[if lt IE 9]>
@@ -40,15 +31,40 @@
 </head>
 <body>
 
+	<!-- container -->
+	<div class="container">
+
+    <div class="row">
+      <img src="images/title.gif">
+    </div>
+
+    <div id="menu" class="row">
+      <ul>
+        <li>Download &gt;</li>
+        <li>Macintosh OS X</li>
+        <li>Personnal Computer</li>
+        <li>+ Download PRINT</li>
+      </ul>
+    </div>
+
+    <div id="background" class="row">
+      <img src="images/background.gif">
+    </div>
+
+    <div id="links" class="row">
+      <ul>
+        <li><a href="http://www.revue-multiprise.com">www.revue-multiprise.com</a></li>
+        <li><a href="http://www.tetalab.org">www.tetalab.org</a></li>
+        <li><a href="http://www-deux-mille.com">www.deux-mille.com</a></li>
+      </ul>
+    </div>
+
+	</div>
+	<!-- container -->
+
 	<!-- Included JS Files -->
 	<script src="javascripts/jquery.min.js"></script>
-	<!-- Combine and Compress These JS Files -->
-	<script src="javascripts/jquery.reveal.js"></script>
-	<script src="javascripts/jquery.orbit-1.4.0.js"></script>
-	<script src="javascripts/jquery.customforms.js"></script>
-	<script src="javascripts/jquery.placeholder.min.js"></script>
-	<script src="javascripts/jquery.tooltips.js"></script>
-	<!-- End Combine and Compress These JS Files -->
+	<script src="javascripts/foundation.js"></script>
 	<script src="javascripts/app.js"></script>
 
 </body>
