add css for first page

--- a/index.html
+++ b/index.html
@@ -34,17 +34,15 @@
 	<!-- container -->
 	<div class="container">
 
-    <div class="row">
+    <div id="title" class="row">
       <img src="images/title.gif">
     </div>
 
     <div id="menu" class="row">
-      <ul>
-        <li>Download &gt;</li>
-        <li>Macintosh OS X</li>
-        <li>Personnal Computer</li>
-        <li>+ Download PRINT</li>
-      </ul>
+      <div>Download &gt;</div>
+      <div class="light"><a href="">Macintosh OS X</a></div>
+      <div class="light"><a href="">Personnal Computer</a></div>
+      <div class="dark"><a href="">+ Download PRINT</a></div>
     </div>
 
     <div id="background" class="row">
@@ -52,11 +50,9 @@
     </div>
 
     <div id="links" class="row">
-      <ul>
-        <li><a href="http://www.revue-multiprise.com">www.revue-multiprise.com</a></li>
-        <li><a href="http://www.tetalab.org">www.tetalab.org</a></li>
-        <li><a href="http://www-deux-mille.com">www.deux-mille.com</a></li>
-      </ul>
+      <div><a href="http://www.revue-multiprise.com">www.revue-multiprise.com</a></div>
+      <div><a href="http://www.tetalab.org">www.tetalab.org</a></div>
+      <div><a href="http://www-deux-mille.com">www.deux-mille.com</a></div>
     </div>
 
 	</div>
