add app and pdf downloads

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
     <div id="menu" class="row">
       <div>Download &gt;</div>
-      <div class="light"><a href="">Macintosh OS X</a></div>
-      <div class="light"><a href="">Personnal Computer</a></div>
-      <div class="dark"><a href="">+ Download PRINT</a></div>
+      <div class="light"><a href="./app_osx.zip">Macintosh OS X</a></div>
+      <div class="light"><a href="./app_windows.zip">Personnal Computer</a></div>
+      <div class="dark"><a href="./minitel.pdf">+ Download PRINT</a></div>
     </div>
 
     <div id="background" class="row">
